--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Love Quiz</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,30 +13,30 @@
     <form id="quizForm">
       <div class="question">
         <p>1. Hamari first movie together kaunsi thi?</p>
-        <input type="radio" name="q1" value="a" /> DDLJ<br>
-        <input type="radio" name="q1" value="b" /> Tamasha<br>
-        <input type="radio" name="q1" value="c" /> Jab We Met<br>
+        <label><input type="radio" name="q1" value="a" /> DDLJ</label><br>
+        <label><input type="radio" name="q1" value="b" /> Tamasha</label><br>
+        <label><input type="radio" name="q1" value="c" /> Jab We Met</label><br>
       </div>
 
       <div class="question">
         <p>2. Mera favorite color kya hai?</p>
-        <input type="radio" name="q2" value="a" /> Blue<br>
-        <input type="radio" name="q2" value="b" /> Black<br>
-        <input type="radio" name="q2" value="c" /> Red<br>
+        <label><input type="radio" name="q2" value="a" /> Blue</label><br>
+        <label><input type="radio" name="q2" value="b" /> Black</label><br>
+        <label><input type="radio" name="q2" value="c" /> Red</label><br>
       </div>
 
       <div class="question">
         <p>3. Hamari anniversary kis month me aati hai?</p>
-        <input type="radio" name="q3" value="a" /> February<br>
-        <input type="radio" name="q3" value="b" /> March<br>
-        <input type="radio" name="q3" value="c" /> April<br>
+        <label><input type="radio" name="q3" value="a" /> February</label><br>
+        <label><input type="radio" name="q3" value="b" /> March</label><br>
+        <label><input type="radio" name="q3" value="c" /> April</label><br>
       </div>
 
       <div class="question">
         <p>4. Mera favorite dish kya hai?</p>
-        <input type="radio" name="q4" value="a" /> Biryani<br>
-        <input type="radio" name="q4" value="b" /> Pasta<br>
-        <input type="radio" name="q4" value="c" /> Pizza<br>
+        <label><input type="radio" name="q4" value="a" /> Biryani</label><br>
+        <label><input type="radio" name="q4" value="b" /> Pasta</label><br>
+        <label><input type="radio" name="q4" value="c" /> Pizza</label><br>
       </div>
 
       <button type="submit">Submit</button>
@@ -45,6 +46,7 @@
   <!-- Popup Card -->
   <div class="popup" id="popup">
     <div class="popup-content">
+      <div class="confetti">🎉🎊✨💖🎊🎉</div>
       <h2>To My Jaan ❤️</h2>
       <p>
         Tumhara muskurana meri pehchaan hai,<br />
