--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
     </form>
   </div>
 
-  <!-- Popup Card -->
+  <!-- Popup -->
   <div class="popup" id="popup">
     <div class="popup-content">
-      <div class="confetti">🎉🎊✨💖🎊🎉</div>
-      <h2>To My Jaan ❤️</h2>
+      <h2>🎉 Congratulations Jaan! 🎉</h2>
       <p>
         Tumhara muskurana meri pehchaan hai,<br />
         Tum khush raho yahi meri shaan hai,<br />
         Kuch bhi nahi hai tumhare bina,<br />
-        Bas tum ho to meri har subah aur shaam hai... 🌙
+        Bas tum ho to meri har subah aur shaam hai... 💖
       </p>
       <button onclick="closePopup()">Close</button>
     </div>
+    <div id="confetti-container"></div>
   </div>
 
   <script src="script.js"></script>
