--- a/index.html
+++ b/index.html
@@ -12,31 +12,31 @@
 
     <form id="quizForm">
       <div class="question">
-        <p>1. Hamari first movie together kaunsi thi?</p>
-        <label><input type="radio" name="q1" value="a" /> DDLJ</label><br>
-        <label><input type="radio" name="q1" value="b" /> Tamasha</label><br>
-        <label><input type="radio" name="q1" value="c" /> Jab We Met</label><br>
+        <p>1. Tumhe Khane me kya Pasand he?</p>
+        <label><input type="radio" name="q1" value="a" /> Samosa/panipuri</label>
+        <label><input type="radio" name="q1" value="b" /> weffers</label>
+        <label><input type="radio" name="q1" value="c" /> Icecream</label>
       </div>
 
       <div class="question">
-        <p>2. Mera favorite color kya hai?</p>
-        <label><input type="radio" name="q2" value="a" /> Blue</label><br>
-        <label><input type="radio" name="q2" value="b" /> Black</label><br>
-        <label><input type="radio" name="q2" value="c" /> Red</label><br>
+        <p>2. Tumhe me zyada kis namm se bulata hu</p>
+        <label><input type="radio" name="q2" value="a" /> baby</label>
+        <label><input type="radio" name="q2" value="b" /> My Teddy bear</label>
+        <label><input type="radio" name="q2" value="c" /> bubu shona</label>
       </div>
 
       <div class="question">
         <p>3. Hamari anniversary kis month me aati hai?</p>
-        <label><input type="radio" name="q3" value="a" /> February</label><br>
-        <label><input type="radio" name="q3" value="b" /> March</label><br>
-        <label><input type="radio" name="q3" value="c" /> April</label><br>
+        <label><input type="radio" name="q3" value="a" /> February</label>
+        <label><input type="radio" name="q3" value="b" /> March</label>
+        <label><input type="radio" name="q3" value="c" /> April</label>
       </div>
 
       <div class="question">
-        <p>4. Mera favorite dish kya hai?</p>
-        <label><input type="radio" name="q4" value="a" /> Biryani</label><br>
-        <label><input type="radio" name="q4" value="b" /> Pasta</label><br>
-        <label><input type="radio" name="q4" value="c" /> Pizza</label><br>
+        <p>4. Tum mujhse kitna pyar Karte ho?</p>
+        <label><input type="radio" name="q4" value="a" /> bohot</label>
+        <label><input type="radio" name="q4" value="b" /> bohot zyada</label>
+        <label><input type="radio" name="q4" value="c" /> bohot bohot zyada</label>
       </div>
 
       <button type="submit">Submit</button>
@@ -48,10 +48,8 @@
     <div class="popup-content">
       <h2>🎉 Congratulations Jaan! 🎉</h2>
       <p>
-        Tumhara muskurana meri pehchaan hai,<br />
-        Tum khush raho yahi meri shaan hai,<br />
-        Kuch bhi nahi hai tumhare bina,<br />
-        Bas tum ho to meri har subah aur shaam hai... 💖
+        💕 Mujhe ✨ jine Ki Khwahish ✨ Hoti Hai, <br>
+          Teri ❣ Muskurahat 😍 Dekh Kar... 💕
       </p>
       <button onclick="closePopup()">Close</button>
     </div>
