--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="question">
-        <p>2. Tumhe me zyada kis namm se bulata hu</p>
+        <p>2. Tumhe me zyada kis name se bulata hu</p>
         <label><input type="radio" name="q2" value="a" /> baby</label>
         <label><input type="radio" name="q2" value="b" /> My Teddy bear</label>
         <label><input type="radio" name="q2" value="c" /> bubu shona</label>
